# 1337patch-lib-rs

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: LICENSE  bug_report.yaml  feature_request.yaml
src/: lib.rs
