[package]
name = "lib1337patch"
description = "Library dedicated to parsing 1337 patch files."
license = "MIT"
authors = ["Gabriel GRONDIN (GGLinnk) <gglinnk@protonmail.com>"]
repository = "https://github.com/GGLinnk/lib1337patch-rs"
readme = "README.md"
keywords = ["1337patch", "library", "parser"]
categories = ["parser-implementations", "data-structures", "encoding"]
publish = true
version = "0.2.0"
edition = "2021"

[dev-dependencies]
tempfile = "3.7.1"
